studentreg/force-app/main/default/objects/Songs__c/Songs__c.object-meta.xml
<CustomObject>
    <label>Songs</label>
    <nameField>
        <label>Songs Name New1</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Songs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>