studentreg/force-app/main/default/objects/Songs__c/fields/Album__c.field-meta.xml
<CustomField>
    <fullName>Album__c</fullName>
    <label>Album</label>
    <referenceTo>Album__c</referenceTo>
    <relationshipLabel>Songs</relationshipLabel>
    <relationshipName>Songs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>