studentreg/force-app/main/default/objects/Songs__c/fields/InActive__c.field-meta.xml
<CustomField>
    <fullName>InActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Active</label>
    <type>Checkbox</type>
</CustomField>