studentreg/force-app/main/default/objects/Songs__c/fields/Songno__c.field-meta.xml
<CustomField>
    <fullName>Songno__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Songno</label>
    <type>AutoNumber</type>
</CustomField>